--- a/server/package.json
+++ b/server/package.json
@@ -4,8 +4,8 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "SET NODE_ENV=PRODUCTION &&node app.js",
-    "dev": "SET NODE_ENV=DEVELOPMENT && nodemon app.js"
+    "start": "SET NODE_ENV=PRODUCTION &&node index.js",
+    "dev": "SET NODE_ENV=DEVELOPMENT && nodemon index.js"
   },
   "keywords": [],
   "author": "",
